# techecho

./: .claude.json  .dockerignore  .env.example  .gitignore  BACKEND_STORAGE_PLAN.md  CLAUDE.md  DEPLOY.md  DEPLOY_WECHAT.md  Dockerfile  PLAN.md  README.md  WECHAT_DEPLOY.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.claude/: ralph-loop.local.md
.claude/commands/: caveman.md  diagnose.md  grill-me.md  grill-with-docs.md  handoff.md  improve-codebase-architecture.md  prototype.md  setup-matt-pocock-skills.md  tdd.md  to-issues.md  to-prd.md  triage.md  write-a-skill.md  zoom-out.md
app/: .env.example  app.json  claude.md  index.html  package-react.json  package.json  project.config.json  project.private.config.json  tsconfig-react.json  vite.config.ts
app/config/: dev.js  index.js  preload.js  prod.js
app/data/: news.json  news_test.json
app/src/: app.config.ts  app.tsx
app/src-react/: App.tsx  index.tsx
config/: mcporter.json
docs/agents/: PRD-003-日期选择器本周本月档位.md  PRD-004-语音风格切换TTS限制逻辑.md
ralph/: DEBUG-GUIDE.md  RALPH-LOOP.md  TEST-CHECKLIST.md  TEST-GUIDE.md  auto-loop.sh  loop-date-picker.sh  prd.json  prd.json.bak  progress.txt  verify-3slots.sh  verify-all.sh  verify-behavior.sh  verify-date-picker.sh  wireframe.html
scripts/: add_backup_audio_url_column.py  collect_news.py  daily_workflow.sh  deploy_server.sh  docker_prod.sh  docker_test.sh  generate_icons.py  migrate_sqlite_to_mysql.py  setup_server.sh  simulate_pipeline.py  test-docker.sh  verify_news.py
src/: main.py
src/api/: auth_api.py  collect_api.py  news_api.py  (+2 more)
(+40 files in other folders)
