[project]
name = "tech-echo"
version = "0.2.0"
description = "Tech Echo - 科技资讯播报平台"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "passlib[bcrypt]>=1.7.4",
    "apscheduler>=3.10.0",
    "feedparser>=6.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
techecho-collect = "scripts.collect_news:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
